<resources>
    <string name="app_name">Chat Application</string>
    <string name="register_now">Register now</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="register_here">Register here!</string>
    <string name="this_is_opponent_message">This is opponent message</string>
    <string name="_10_08_2021_05_12_pm">10–08–2021 05:12 PM</string>
    <string name="this_is_my_message">This is my message</string>
    <string name="_13_08_2021_05_12_pm">13–08–2022 05:17 PM</string>
    <string name="online">Online</string>
    <string name="user_name">User Name</string>
    <string name="fullname">Fullname</string>
    <string name="this_is_last_message">This is last message</string>
    <string name="_1">1</string>
    <string name="messages">Messages</string>
    <string name="type_something">Type Something...</string>
</resources>