<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/theme_color_8"
    tools:context=".Register">
    <TextView
        android:textColor="#424242"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/register_here"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/r_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:background="@drawable/raound_back_white"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/r_mobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="phone"
        android:background="@drawable/raound_back_white"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/r_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/raound_back_white"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/r_registerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"

        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_theme"
        android:text="@string/register_now"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

</LinearLayout>