<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rootLayout"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ProfilePic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/png" />
    <LinearLayout
                android:layout_toStartOf="@+id/unseenMessages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/ProfilePic"
                >
            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="18sp"
                android:text="@string/fullname"
                android:textStyle="bold"
                />
                <TextView
                    android:id="@+id/lastMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textStyle="bold"

                    android:layout_marginTop="5dp"
                    android:textColor="@color/theme_color_80"
                    android:textSize="14sp"
                    android:text="@string/this_is_last_message"
                    />

            </LinearLayout>

            <TextView

                android:id="@+id/unseenMessages"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_theme"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="#FFFFFF"
                android:textSize="11sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>