<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".chat.Chat">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <View-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginStart="3dp"-->
<!--            android:layout_marginTop="75dp"-->
<!--            android:layout_marginEnd="3dp"-->
<!--            android:background="#14000000" />-->

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_back_light"
            android:paddingStart="12sp"
            android:paddingEnd="2dp"
            android:src="@drawable/back_btn" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/backbtn"
            android:src="@drawable/png"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/profilePic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/user_name"
                android:textColor="#424242"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/online"
                android:textColor="#00C853"
                android:textSize="13sp" />

        </LinearLayout>


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottonBar"
        android:layout_below="@+id/topBar" />

    <RelativeLayout
        android:id="@+id/bottonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/theme_color_8"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="username"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/sendBtn"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/type_something"
            android:textSize="18sp" />

        <View
            android:layout_width="3dp"
            android:layout_height="50dp"

            android:layout_marginStart="290dp"
            android:layout_marginEnd="10dp"
            android:background="#14000000" />

        <ImageView
            android:contentDescription="@string/_1"
            android:id="@+id/sendBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/send"

            />


    </RelativeLayout>

</RelativeLayout>